fixed visible of button when click changeBtnAdd

--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ img {
     border: 1px solid #fff;
     color: #fff;
     background-color: #1bb9e5;
-    margin: 15px 0;
+    margin: 15px 30px;
 }
 
 .btn:hover {
@@ -137,7 +137,7 @@ img {
 }
 
 .exercise_item {
-    margin: 5px 0;
+    margin: 5px 30px;
     font-size: 18px;
 }
 
